--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             }
                             else
                             {
-                                var good_msg = "Thanks for filling out the form. Its great to know that you had great experience"
+                                var good_msg = "Thanks for filling out the form. Its great to know that you had a great experience"
                                 var bad_msg = "Thank you for filling out the form. We will imporve our services"
 
                                 if(document.forms["form1"]["points"].value == "")
