--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <input type = radio name = "location" id = "ambala" value = "ambala">
                     <label for = "ambala">Ambala</label>
                     <input type = radio name = "location" id = "patiala" value = "patiala">
-                    <label for = "ambala">Patiala</label>
+                    <label for = "patiala">Patiala</label>
                     <input type = radio name = "location" id = "ludhiana" value = "ludhiana">
-                    <label for = "ambala">Ludhiana</label>
+                    <label for = "ludhiana">Ludhiana</label>
                     <input type = radio name = "location" id = "other" value = "other">
-                    <label for = "ambala">Other</label>
+                    <label for = "other">Other</label>
                     <br><br>
                     
                     <h2>Feedback</h2>
